# markdown_analyze

./: Cargo.toml  readme.md
full_token_derive_macro/: Cargo.toml
full_token_derive_macro/src/: lib.rs
regex_macro/: Cargo.toml
regex_macro/src/: lib.rs
src/: dfa.rs  interface.rs  lib.rs  marco.rs  tokens.rs
src/dfa/: builder.rs  core.rs  displays.rs  interface.rs  utils.rs  wraps.rs
src/dfa/builder/: trans_holder.rs
src/lexical/: mod.rs  tokens.rs
src/lexical/dfa/: builder.rs  core.rs  displays.rs  interface.rs  utils.rs  wraps.rs
src/lexical/dfa/builder/: trans_holder.rs
src/lexical/nfa/: mod.rs
src/lexical/token_trait/: impl_token_meta.rs  mod.rs
src/lexical/tokens/: code_snippet.rs  reference.rs  titles.rs
src/nfa/: mod.rs
src/syntax/: readme.md
src/utils/: counter.rs
